# learning-sandbox

./: README.md
neural_network/: CMakeLists.txt
neural_network/include/: neural_network.h  neural_network.ipl  neuron.h  util.h
neural_network/src/: main.cpp
polyhierarchy/: main.pl
tensorflow/face_recognizer/: fetch_data.sh
